# somgr

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release-aarch64.yml  release-x86_64.yml  release.yml
src/: args.rs  main.rs  statics.rs  utilities.rs
src/commands/: about.rs  backup.rs  help.rs  lock.rs  login.rs  mod.rs  mount.rs  reboot.rs  remount.rs  run.rs  shell.rs  unlock.rs  update.rs
src/core/: fs.rs  log.rs  mod.rs  subprocess.rs
src/core/dpkg/: mod.rs  serde.rs  status.rs
src/util/: dpkg.rs  fmt.rs  log.rs  mod.rs  path.rs  permissions.rs  serde.rs  verification.rs
