[package]
name = "somgr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stblib = "0.6.2"
lazy_static = "1.4.0"
eyre = "0.6.12"
nix = { version = "0.29.0", features = ["user"] }
libc = "0.2.155"
cmd_lib = "1.9.4"
subprocess = "0.2.9"
dirs = "5.0.1"
indicatif = "0.17.8"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"

futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
reqwest = "0.12.5"

[profile.release]
opt-level = 'z'
strip = true
lto = true