[package]
name = "somgr"
version = "0.3.2"
edition = "2021"
description = "somgr is the management tool for StrawberryOS to update, configure or manage your operating system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stblib = "0.6.2"
lazy_static = "1.5.0"
eyre = "0.6.12"
regex = "1.10.6"
karen = "0.1.2"

subprocess = "0.2.9"

dirs = "5.0.1"
indicatif = "0.17.8"

serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.123"
serde_yaml = "0.9.34"

tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.5"

[profile.release]
opt-level = 'z'
strip = true
lto = true